--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router": "^6.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
+    "swiper": "^7.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
